Fri May 20 17:10:00 2005    Huang-Ming Huang <hh1@cse.wustl.edu>
        
        * tao/IIOP_Endpoint:
          
          Fixed problem in TAO_IIOP_Endpoint::is_preferred_network()
          which should check for empty string rather than null pointer.

Fri May 20 17:00:00 2005    Huang-Ming Huang <hh1@cse.wustl.edu>
        
        * tao/PortableServer/ServantRetentionStrategyRetain.cpp:
        
          Fixed problem in ServantRetentionStrategyRetain::find_servant()
          where servant_upcall.user_id is assigned to a local variable which
          causes memory access violation when ServerReqeustInfo::object_id() 
          is accessed inside interceptors. 

Fri May 20 18:30:23 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_operation/operation.cpp:
        * TAO_IDL/be/be_visitor_tmplinst/tmplinst_cs.cpp:
        * TAO_IDL/be/be_visitor_tmplinst/tmplinst_ss.cpp:
        
          Added global '::' qualifier to several instances of code
          generation of a scoped name used as a template argument,
          to avoid ambiguity if there are two modules with the same
          name at different levels of nesting. This fix closes
          [BUGID:2125].
          
        * tests/IDL_Test/array.idl:
        * tests/IDL_Test/nested_scope.idl:
        * tests/IDL_Test/typedef.idl:
        
          Added various IDL snips provided by Simon McQueen
          <sm@prismtech.com> in various (now closed) Bugzilla entries.

Fri May 20 12:13:13 2005  Iliyan Jeliazkov  <jeliazkov_i@ociweb.com>

        * orbsvcs/Naming_Service/NT_Naming_Service.h:
        * orbsvcs/Naming_Service/NT_Naming_Service.cpp:

	  Fixed build problems with Visual C++ 6 on Windows

Fri May 20 15:22:42 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/valuetype_sh.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_ss.cpp:

          Changed the copy constructor for generated skeleton-side