@@ -1,3 +1,9 @@
+Fri May 20 16:44:54 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* tao/Makefile.am:
+
+	  Regenerated.
+
 Fri May 20 17:10:00 2005    Huang-Ming Huang <hh1@cse.wustl.edu>
         
         * tao/IIOP_Endpoint:
